tests/neg/i6391.scala
object Test {
  def foo(x: String, y: x.type): Any = ???
  val f = foo  // error
}
